...
import com.neptune.neptune.ui.picker.sanitizeAndRename
import com.neptune.neptune.ui.theme.NepTuneTheme
import java.io.File
import kotlinx.coroutines.runBlocking

object ProjectListScreenTestTags {
  const val PROJECT_LIST_SCREEN = "ProjectListScreen"
  const val PROJECT_LIST = "projectList"
  const val SEARCH_BAR = "searchBar"
  const val PROJECT_NAME = "ProjectName"
  const val DESCRIPTION_TEXT_FIELD = "DescriptionTextField"
  const val SEARCH_TEXT_FIELD = "SearchTextField"
  const val CONFIRM_DIALOG = "ConfirmDialog"
  const val CHANGE_DESCRIPTION_BUTTON = "ChangeDescriptionButton"
  const val RENAME_BUTTON = "RenameButton"
  const val DELETE_BUTTON = "DeleteButton"
  const val DOWNLOAD_BUTTON = "DownloadButton"
}

private const val SEARCHBAR_FONT_SIZE = 21

/**
...
  var text by remember { mutableStateOf(initialName) }

  AlertDialog(
      onDismissRequest = onDismiss,
      title = { Text("Rename Project") },
      text = {
        OutlinedTextField(value = text, onValueChange = { text = it }, label = { Text("New name") })
      },
      confirmButton = {
        Button(
            onClick = { onConfirm(text) },
            modifier = Modifier.testTag(ProjectListScreenTestTags.CONFIRM_DIALOG)) {
              Text("Confirm")
...
                    disabledIndicatorColor = Color.Transparent,
                    focusedTextColor = NepTuneTheme.colors.onBackground,
                    unfocusedTextColor = NepTuneTheme.colors.onBackground),
            leadingIcon = {
              Icon(
                  imageVector = Icons.Default.Search,
                  contentDescription = "Search Icon",
                  tint = NepTuneTheme.colors.onBackground,
                  modifier = Modifier.size(30.dp))
            },
        )
      }
}
...
