...
        // Search Field
        TextField(
            value = searchText,
            onValueChange = { searchText = it },
            placeholder = {
              Text(
                  text = "Search for a Project",
                  color = NepTuneTheme.colors.searchBar,
                  style =
                      TextStyle(
                          fontSize = 21.sp,
                          fontFamily = FontFamily(Font(R.font.markazi_text)),
                          fontWeight = FontWeight(100)))
...
